--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "sass": "^1.68.0",
     "vite": "^4.4.9"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
-    "husky": "^8.0.0"
+    "tailwindcss": "^3.3.3"
   }
 }
