--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
   "name": "boilerplate-front-end",
   "version": "0.0.1",
-  "description": "Boilerplate of front end project",
+  "description": "Boilerplate Front",
   "main": "script.js",
   "scripts": {
     "test": "jest",
     "dev": "vite",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "sass": "sass -w ./scss:css"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sass": "^1.68.0",
+    "autoprefixer": "^10.4.16",
+    "css-loader": "^6.8.1",
+    "postcss": "^8.4.31",
+    "sass-loader": "^13.3.2",
+    "tailwind": "^4.0.0",
     "vite": "^4.4.9"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
+    "prettier": "3.0.3",
+    "sass": "^1.68.0",
     "tailwindcss": "^3.3.3"
   }
 }
